--- a/index.html
+++ b/index.html
@@ -474,29 +474,26 @@
         const unitPrice = Number(p.unitPrice || 0);
 
         tr.innerHTML = `
-          <td class="px-4 py-2 align-top">
-            <div class="font-medium text-slate-100 text-xs md:text-sm">${p.description || "-"}</div>
-            <div class="text-[11px] text-slate-500">ID: ${p.id}</div>
-          </td>
-          <td class="px-4 py-2 align-top text-xs text-slate-300">
-            <div>${p.unit || "-"}</div>
-            <div class="text-[11px] text-slate-500">${p.unitSize || ""}</div>
-          </td>
-          <td class="px-4 py-2 align-top text-xs text-slate-300">
-            R$ ${unitPrice.toFixed(2)}
-          </td>
-          <td class="px-4 py-2 align-top text-xs text-slate-300">
-            ${currentQty.toFixed(2)}
-          </td>
-          <td class="px-4 py-2 align-top text-xs text-slate-300">
-            ${p.location || "-"}
-          </td>
-          <td class="px-4 py-2 align-top text-right text-xs">
-            <button class="px-3 py-1 rounded-xl bg-amber-500/10 text-amber-300 border border-amber-500/40 hover:bg-amber-500/20 mb-1"
+                   <td class="px-4 py-2 align-top text-right text-xs space-y-1">
+            <button
+              class="w-full px-3 py-1 rounded-xl bg-amber-500/10 text-amber-300 border border-amber-500/40 hover:bg-amber-500/20"
               data-action="purchase" data-id="${p.id}">
               Registrar compra
             </button>
+
+            <button
+              class="w-full px-3 py-1 rounded-xl bg-slate-800 text-slate-200 border border-slate-700 hover:bg-slate-700"
+              data-action="edit" data-id="${p.id}">
+              Editar
+            </button>
+
+            <button
+              class="w-full px-3 py-1 rounded-xl bg-slate-900 text-slate-200 border border-slate-700 hover:bg-slate-800"
+              data-action="history" data-id="${p.id}">
+              Histórico
+            </button>
           </td>
+
         `;
 
         productsTableBody.appendChild(tr);
@@ -559,13 +556,107 @@
       }
     }
 
-    productsTableBody.addEventListener("click", (e) => {
-      const btn = e.target.closest("button[data-action='purchase']");
-      if (!btn) return;
-      const id = btn.getAttribute("data-id");
-      if (id) handlePurchase(id);
+
+productsTableBody.addEventListener("click", (e) => {
+  const btn = e.target.closest("button[data-action]");
+  if (!btn) return;
+
+  const action = btn.getAttribute("data-action");
+  const id = btn.getAttribute("data-id");
+  if (!id) return;
+
+  if (action === "purchase") {
+    handlePurchase(id);
+  } else if (action === "edit") {
+    handleEditProduct(id);
+  } else if (action === "history") {
+    handleShowHistory(id);
+  }
+});
+
+// ✏️ Editar dados básicos do produto (por enquanto, só descrição)
+async function handleEditProduct(productId) {
+  // pega o produto da lista em memória
+  const product = allProducts.find(p => p.id === productId);
+  if (!product) {
+    alert("Produto não encontrado na lista carregada.");
+    return;
+  }
+
+  const novaDescricao = prompt(
+    "Nova descrição para o produto:",
+    product.description || ""
+  );
+
+  if (!novaDescricao || novaDescricao.trim() === "") {
+    // usuário cancelou ou deixou vazio
+    return;
+  }
+
+  try {
+    const res = await fetch(`${API_BASE}/products/${productId}`, {
+      method: "PATCH",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ description: novaDescricao.trim() })
     });
 
+    if (!res.ok) {
+      const errText = await res.text();
+      console.error("Erro ao editar produto:", errText);
+      alert("Erro ao editar produto. Veja o console para detalhes.");
+      return;
+    }
+
+    alert("Produto atualizado com sucesso!");
+    await loadProducts(); // recarrega a lista
+  } catch (err) {
+    console.error("Erro na requisição de edição:", err);
+    alert("Erro de conexão ao editar produto.");
+  }
+}
+
+// 📜 Mostrar histórico de compras do produto
+async function handleShowHistory(productId) {
+  try {
+    const res = await fetch(`${API_BASE}/products/${productId}/history`);
+    if (!res.ok) {
+      const errText = await res.text();
+      console.error("Erro ao buscar histórico:", errText);
+      alert("Erro ao buscar histórico de compras.");
+      return;
+    }
+
+    const history = await res.json();
+
+    if (!Array.isArray(history) || history.length === 0) {
+      alert("Nenhuma compra registrada para este produto.");
+      return;
+    }
+
+    // monta um texto simples com data, quantidade e valor
+    let texto = "Histórico de compras:\n\n";
+    history.forEach((h) => {
+      const qtd = Number(h.quantity || 0);
+      const total = Number(h.totalPrice || 0);
+      const unit = qtd > 0 ? total / qtd : 0;
+      const data = h.purchaseDate || h.date || "";
+
+      texto += `Data: ${data}\n`;
+      texto += `Quantidade: ${qtd}\n`;
+      texto += `Valor total: R$ ${total.toFixed(2)}\n`;
+      texto += `Valor unitário: R$ ${unit.toFixed(2)}\n`;
+      texto += "-----------------------------\n";
+    });
+
+    alert(texto);
+  } catch (err) {
+    console.error("Erro na requisição de histórico:", err);
+    alert("Erro de conexão ao buscar histórico.");
+  }
+}
+
+
+    
     // -----------------------------
     // Submeter formulário de novo produto
     // -----------------------------
