--- a/index.html
+++ b/index.html
@@ -480,24 +480,18 @@
   <td class="px-4 py-3 text-sm text-right">${currentQty.toFixed(2)}</td>
   <td class="px-4 py-3 text-xs text-slate-400">${p.location || "-"}</td>
 
-  <td class="px-4 py-3 text-right text-xs space-y-1">
-    <button
-      class="w-full px-3 py-1 rounded-xl bg-amber-500/10 text-amber-300 border border-amber-500/40 hover:bg-amber-500/20"
-      data-action="purchase" data-id="${p.id}">
-      Registrar compra
-    </button>
-
-    <button
-      class="w-full px-3 py-1 rounded-xl bg-slate-800 text-slate-200 border border-slate-700 hover:bg-slate-700"
-      data-action="edit" data-id="${p.id}">
+    <td class="px-4 py-2 text-right text-xs space-x-2 whitespace-nowrap text-amber-400 font-medium">
+    <span class="cursor-pointer hover:underline" data-action="purchase" data-id="${p.id}">
+      Registrar
+    </span>
+    •
+    <span class="cursor-pointer hover:underline text-slate-300" data-action="edit" data-id="${p.id}">
       Editar
-    </button>
-
-    <button
-      class="w-full px-3 py-1 rounded-xl bg-slate-900 text-slate-200 border border-slate-700 hover:bg-slate-800"
-      data-action="history" data-id="${p.id}">
+    </span>
+    •
+    <span class="cursor-pointer hover:underline text-slate-400" data-action="history" data-id="${p.id}">
       Histórico
-    </button>
+    </span>
   </td>
 `;
 
