--- a/index.html
+++ b/index.html
@@ -40,16 +40,23 @@
       </div>
 
       <nav class="flex-1 px-4 py-4 space-y-1">
-        <button id="menu-estoque" class="w-full flex items-center gap-2 px-3 py-2 rounded-xl text-sm font-medium bg-slate-800 text-amber-400">
-          <span>📦</span> <span>Estoque</span>
-        </button>
-        <button id="menu-pedidos" class="w-full flex items-center gap-2 px-3 py-2 rounded-xl text-sm text-slate-300 hover:bg-slate-800/60">
-          <span>🧾</span> <span>Pedidos (visualização)</span>
-        </button>
-        <button id="menu-sobre" class="w-full flex items-center gap-2 px-3 py-2 rounded-xl text-sm text-slate-300 hover:bg-slate-800/60">
-          <span>⚙️</span> <span>Sobre / Ajuda</span>
-        </button>
-      </nav>
+  <button id="menu-estoque" class="w-full flex items-center gap-2 px-3 py-2 rounded-xl text-sm font-medium bg-slate-800 text-amber-400">
+    <span>📦</span> <span>Estoque</span>
+  </button>
+
+  <button id="menu-crm" class="w-full flex items-center gap-2 px-3 py-2 rounded-xl text-sm text-slate-300 hover:bg-slate-800/60">
+    <span>🙋</span> <span>Clientes / CRM</span>
+  </button>
+
+  <button id="menu-pedidos" class="w-full flex items-center gap-2 px-3 py-2 rounded-xl text-sm text-slate-300 hover:bg-slate-800/60">
+    <span>🧾</span> <span>Pedidos (visualização)</span>
+  </button>
+
+  <button id="menu-sobre" class="w-full flex items-center gap-2 px-3 py-2 rounded-xl text-sm text-slate-300 hover:bg-slate-800/60">
+    <span>⚙️</span> <span>Sobre / Ajuda</span>
+  </button>
+</nav>
+
 
       <div class="px-6 py-4 border-t border-slate-800 text-xs text-slate-500">
         API conectada ao Firebase<br/>
@@ -286,6 +293,93 @@
           </p>
         </div>
 
+                <!-- ABA CRM -->
+        <div id="tab-crm" class="space-y-4 hidden">
+          <div class="flex flex-col md:flex-row md:items-center justify-between gap-3">
+            <div>
+              <h2 class="text-lg font-semibold text-slate-50">Clientes / CRM</h2>
+              <p class="text-sm text-slate-400">Cadastre clientes e veja quem já está na base.</p>
+            </div>
+          </div>
+
+          <!-- Formulário de cliente -->
+          <div class="rounded-2xl bg-slate-950 border border-slate-800 p-4 md:p-5">
+            <form id="crm-form" class="grid grid-cols-1 md:grid-cols-4 gap-3 text-sm">
+              <div class="md:col-span-2">
+                <label class="block text-xs text-slate-400 mb-1">Nome</label>
+                <input type="text" id="crm-name"
+                  class="w-full rounded-xl bg-slate-900 border border-slate-700 px-3 py-2" />
+              </div>
+
+              <div>
+                <label class="block text-xs text-slate-400 mb-1">Telefone (DDD+Número)</label>
+                <input type="text" id="crm-phone" placeholder="62999999999"
+                  class="w-full rounded-xl bg-slate-900 border border-slate-700 px-3 py-2" />
+              </div>
+
+              <div>
+                <label class="block text-xs text-slate-400 mb-1">Canal</label>
+                <select id="crm-channel"
+                  class="w-full rounded-xl bg-slate-900 border border-slate-700 px-3 py-2">
+                  <option value="presencial">Presencial</option>
+                  <option value="garcom">Garçom</option>
+                  <option value="nicochat">Nicochat</option>
+                  <option value="app">App / Online</option>
+                </select>
+              </div>
+
+              <div class="md:col-span-4">
+                <label class="block text-xs text-slate-400 mb-1">Observações</label>
+                <input type="text" id="crm-notes"
+                  class="w-full rounded-xl bg-slate-900 border border-slate-700 px-3 py-2" />
+              </div>
+
+              <div class="md:col-span-4 flex justify-end gap-3">
+                <button type="submit"
+                  class="px-4 py-2 rounded-xl text-sm font-medium bg-emerald-500 text-slate-950 hover:bg-emerald-400">
+                  Salvar cliente
+                </button>
+              </div>
+            </form>
+          </div>
+
+          <!-- Filtros / busca -->
+          <div class="flex flex-col md:flex-row md:items-center justify-between gap-3">
+            <div class="relative">
+              <input id="search-customers" type="text" placeholder="Buscar por nome, telefone ou canal..."
+                class="w-64 max-w-full pl-8 pr-3 py-2 rounded-xl bg-slate-950 border border-slate-800 text-sm text-slate-100 placeholder:text-slate-500 focus:outline-none focus:ring-1 focus:ring-amber-500" />
+              <span class="absolute left-2 top-1.5 text-slate-500 text-sm">🔍</span>
+            </div>
+            <div class="text-xs text-slate-500">
+              Clientes cadastrados via garçom, app, Nicochat ou atendimento presencial.
+            </div>
+          </div>
+
+          <!-- Tabela de clientes -->
+          <div class="rounded-2xl bg-slate-950 border border-slate-800 overflow-hidden">
+            <div class="max-h-[320px] overflow-auto scrollbar-thin">
+              <table class="min-w-full text-sm">
+                <thead class="bg-slate-900/60 sticky top-0 z-10">
+                  <tr>
+                    <th class="text-left px-4 py-2 text-xs font-semibold text-slate-400">Nome</th>
+                    <th class="text-left px-4 py-2 text-xs font-semibold text-slate-400">Telefone</th>
+                    <th class="text-left px-4 py-2 text-xs font-semibold text-slate-400">Canal</th>
+                    <th class="text-left px-4 py-2 text-xs font-semibold text-slate-400">Observações</th>
+                  </tr>
+                </thead>
+                <tbody id="customers-table-body" class="divide-y divide-slate-800">
+                  <!-- via JS -->
+                </tbody>
+              </table>
+            </div>
+            <div class="px-4 py-2 text-[11px] text-slate-500 border-t border-slate-800">
+              Encontrados <span id="customers-count">0</span> clientes.
+            </div>
+          </div>
+        </div>
+
+
+        
         <!-- ABA SOBRE -->
         <div id="tab-sobre" class="space-y-3 hidden text-sm text-slate-300">
           <h2 class="text-lg font-semibold text-slate-50">Sobre o painel</h2>
