--- a/index.html
+++ b/index.html
@@ -39,23 +39,24 @@
         </div>
       </div>
 
-      <nav class="flex-1 px-4 py-4 space-y-1">
+<nav class="flex-1 px-4 py-4 space-y-1">
   <button id="menu-estoque" class="w-full flex items-center gap-2 px-3 py-2 rounded-xl text-sm font-medium bg-slate-800 text-amber-400">
     <span>📦</span> <span>Estoque</span>
-  </button>
-
-  <button id="menu-crm" class="w-full flex items-center gap-2 px-3 py-2 rounded-xl text-sm text-slate-300 hover:bg-slate-800/60">
-    <span>🙋</span> <span>Clientes / CRM</span>
   </button>
 
   <button id="menu-pedidos" class="w-full flex items-center gap-2 px-3 py-2 rounded-xl text-sm text-slate-300 hover:bg-slate-800/60">
     <span>🧾</span> <span>Pedidos (visualização)</span>
   </button>
 
+  <button id="menu-crm" class="w-full flex items-center gap-2 px-3 py-2 rounded-xl text-sm text-slate-300 hover:bg-slate-800/60">
+    <span>👤</span> <span>CRM / Clientes</span>
+  </button>
+
   <button id="menu-sobre" class="w-full flex items-center gap-2 px-3 py-2 rounded-xl text-sm text-slate-300 hover:bg-slate-800/60">
     <span>⚙️</span> <span>Sobre / Ajuda</span>
   </button>
 </nav>
+
 
 
       <div class="px-6 py-4 border-t border-slate-800 text-xs text-slate-500">
@@ -399,6 +400,51 @@
           </p>
         </div>
 
+
+        <!-- ABA CRM / CLIENTES -->
+<div id="tab-crm" class="space-y-4 hidden">
+  <div>
+    <h2 class="text-lg font-semibold text-slate-50">CRM de clientes</h2>
+    <p class="text-sm text-slate-400">
+      Aqui você vai ver quem já comprou, quanto gastou e os últimos pedidos.
+      (Por enquanto é só um rascunho visual.)
+    </p>
+  </div>
+
+  <div class="rounded-2xl bg-slate-950 border border-slate-800 overflow-hidden">
+    <div class="px-4 py-3 border-b border-slate-800 flex items-center justify-between">
+      <span class="text-xs text-slate-400">Lista de clientes</span>
+      <span class="text-[11px] text-slate-500">Em breve integrado com a API</span>
+    </div>
+
+    <div class="max-h-[320px] overflow-auto scrollbar-thin">
+      <table class="min-w-full text-sm">
+        <thead class="bg-slate-900/60 sticky top-0 z-10">
+          <tr>
+            <th class="text-left px-4 py-2 text-xs font-semibold text-slate-400">Telefone</th>
+            <th class="text-left px-4 py-2 text-xs font-semibold text-slate-400">Nome</th>
+            <th class="text-left px-4 py-2 text-xs font-semibold text-slate-400">Último pedido</th>
+            <th class="text-left px-4 py-2 text-xs font-semibold text-slate-400">Total gasto</th>
+          </tr>
+        </thead>
+        <tbody class="divide-y divide-slate-800">
+          <tr>
+            <td class="px-4 py-3 text-xs text-slate-300">Ex: (62) 99999-0000</td>
+            <td class="px-4 py-3 text-xs text-slate-300">Cliente de exemplo</td>
+            <td class="px-4 py-3 text-xs text-slate-400">—</td>
+            <td class="px-4 py-3 text-xs text-slate-400">R$ 0,00</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+  <p class="text-xs text-slate-500">
+    Depois a gente liga isso aqui na API <code>/customers</code> para mostrar clientes reais.
+  </p>
+</div>
+
+        
       </section>
     </main>
   </div>
@@ -462,10 +508,16 @@
     const tabEstoque = document.getElementById("tab-estoque");
     const tabPedidos = document.getElementById("tab-pedidos");
     const tabSobre = document.getElementById("tab-sobre");
+    const tabCrm = document.getElementById("tab-crm");
 
     const btnMenuEstoque = document.getElementById("menu-estoque");
     const btnMenuPedidos = document.getElementById("menu-pedidos");
     const btnMenuSobre = document.getElementById("menu-sobre");
+    const btnMenuCrm = document.getElementById("menu-crm");
+    const tabCrm = document.getElementById("tab-crm");
+    const btnMenuCrm = document.getElementById("menu-crm");
+
+
 
     const btnOpenProductForm = document.getElementById("btn-open-product-form");
     const btnCloseProductForm = document.getElementById("btn-close-product-form");
@@ -480,6 +532,18 @@
     const ordersStatusFilter = document.getElementById("orders-status-filter");
     const ordersTableBody = document.getElementById("orders-table-body");
     const ordersCount = document.getElementById("orders-count");
+
+        // ---- CRM ----
+    const crmForm = document.getElementById("crm-form");
+    const crmName = document.getElementById("crm-name");
+    const crmPhone = document.getElementById("crm-phone");
+    const crmChannel = document.getElementById("crm-channel");
+    const crmNotes = document.getElementById("crm-notes");
+
+    const searchCustomersInput = document.getElementById("search-customers");
+    const customersTableBody = document.getElementById("customers-table-body");
+    const customersCount = document.getElementById("customers-count");
+
 
 
     // --------- elementos do modal de histórico ---------
@@ -503,36 +567,49 @@ historyModal.addEventListener("click", (e) => {
     
     let allProducts = [];
     let stockChart = null;
+    let allCustomers = [];
 
-    // -----------------------------
-    // Alternar abas
-    // -----------------------------
-    function showTab(tab) {
-      tabEstoque.classList.add("hidden");
-      tabPedidos.classList.add("hidden");
-      tabSobre.classList.add("hidden");
 
-      btnMenuEstoque.classList.remove("bg-slate-800", "text-amber-400");
-      btnMenuEstoque.classList.add("text-slate-300");
-      btnMenuPedidos.classList.remove("bg-slate-800", "text-amber-400");
-      btnMenuPedidos.classList.add("text-slate-300");
-      btnMenuSobre.classList.remove("bg-slate-800", "text-amber-400");
-      btnMenuSobre.classList.add("text-slate-300");
+   function showTab(tab) {
+  // esconde todas as abas
+  tabEstoque.classList.add("hidden");
+  tabPedidos.classList.add("hidden");
+  tabSobre.classList.add("hidden");
+  tabCrm.classList.add("hidden");
 
-      if (tab === "estoque") {
-        tabEstoque.classList.remove("hidden");
-        btnMenuEstoque.classList.add("bg-slate-800", "text-amber-400");
-        btnMenuEstoque.classList.remove("text-slate-300");
-      } else if (tab === "pedidos") {
-        tabPedidos.classList.remove("hidden");
-        btnMenuPedidos.classList.add("bg-slate-800", "text-amber-400");
-        btnMenuPedidos.classList.remove("text-slate-300");
-      } else if (tab === "sobre") {
-        tabSobre.classList.remove("hidden");
-        btnMenuSobre.classList.add("bg-slate-800", "text-amber-400");
-        btnMenuSobre.classList.remove("text-slate-300");
-      }
-    }
+  // reseta todos os botões
+  btnMenuEstoque.classList.remove("bg-slate-800", "text-amber-400");
+  btnMenuEstoque.classList.add("text-slate-300");
+
+  btnMenuPedidos.classList.remove("bg-slate-800", "text-amber-400");
+  btnMenuPedidos.classList.add("text-slate-300");
+
+  btnMenuSobre.classList.remove("bg-slate-800", "text-amber-400");
+  btnMenuSobre.classList.add("text-slate-300");
+
+  btnMenuCrm.classList.remove("bg-slate-800", "text-amber-400");
+  btnMenuCrm.classList.add("text-slate-300");
+
+  // ativa só a aba certa
+  if (tab === "estoque") {
+    tabEstoque.classList.remove("hidden");
+    btnMenuEstoque.classList.add("bg-slate-800", "text-amber-400");
+    btnMenuEstoque.classList.remove("text-slate-300");
+  } else if (tab === "pedidos") {
+    tabPedidos.classList.remove("hidden");
+    btnMenuPedidos.classList.add("bg-slate-800", "text-amber-400");
+    btnMenuPedidos.classList.remove("text-slate-300");
+  } else if (tab === "sobre") {
+    tabSobre.classList.remove("hidden");
+    btnMenuSobre.classList.add("bg-slate-800", "text-amber-400");
+    btnMenuSobre.classList.remove("text-slate-300");
+  } else if (tab === "crm") {
+    tabCrm.classList.remove("hidden");
+    btnMenuCrm.classList.add("bg-slate-800", "text-amber-400");
+    btnMenuCrm.classList.remove("text-slate-300");
+  }
+}
+
 
     btnMenuEstoque.addEventListener("click", () => showTab("estoque"));
     btnMenuPedidos.addEventListener("click", () => {
@@ -540,6 +617,8 @@ historyModal.addEventListener("click", (e) => {
       loadOrders();
     });
     btnMenuSobre.addEventListener("click", () => showTab("sobre"));
+    btnMenuCrm.addEventListener("click", () => showTab("crm"));
+
 
     // -----------------------------
     // Abrir / fechar formulário
